--- a/my_shop/users/templates/users/sign_in.html
+++ b/my_shop/users/templates/users/sign_in.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-  {{form.as_p}}
+<form action="" method="post">
+    {% csrf_token %}
+      {{form.as_p}}
+<button typed="submit">sen</button>
+</form>
+
 </body>
 </html>
