--- a/my_shop/users/templates/users/sign_up.html
+++ b/my_shop/users/templates/users/sign_up.html
@@ -5,6 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<form action="" method="post">
+    {% csrf_token %}
     {{form.as_p}}
+    <button type="submit">send</button>
+</form>
+
 </body>
 </html>
